# iliad-network

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  requirements.txt
iliad_network/components/: analyzers.py  data_models.py  preprocessors.py  protocols.py  readers.py
iliad_network/config/: constants.py  paths.py
notebooks/: read_poem.ipynb  read_poerm.ipynb
tests/: test_local_reader.py  test_sentiment_analyzer.py  test_text_preprocessor.py
