[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["iliad_network"]

[project]
name = "iliad-network"
version = "0.1.0"
description = "develop a NLP system that analyzes characters from The Iliad poem"
authors = [{name = "Piero Danti", email = "piero.danti@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "pip>=25.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "spacy>=3.8.4",
    "textblob>=0.19.0",
]


[tool.mypy]
exclude = ['\\.pyi$', 'docs', '.venv', 'notebooks']
ignore_missing_imports = true

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99
exclude = ["jupyter_notebook_config.py"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
